force-app/main/default/objects/Checklist_do_Ativo__c/Checklist_do_Ativo__c.object-meta.xml
<CustomObject>
    <label>Item de Checklist do Ativo</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Nome de Checklist do Ativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens de Checklist do Ativo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>