force-app/main/default/objects/Checklist_do_Ativo__c/fields/Ativo_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Ativo_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo Relacionado</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Itens de Checklist do Ativo</relationshipLabel>
    <relationshipName>Itens_de_Checklist_do_Ativo</relationshipName>
    <type>Lookup</type>
</CustomField>