force-app/main/default/objects/Checklist_do_Ativo__c/fields/Conforme__c.field-meta.xml
<CustomField>
    <fullName>Conforme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conforme</label>
    <type>Checkbox</type>
</CustomField>