force-app/main/default/objects/Checklist_do_Ativo__c/fields/N_o_Conforme__c.field-meta.xml
<CustomField>
    <fullName>N_o_Conforme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Não Conforme</label>
    <type>Checkbox</type>
</CustomField>