force-app/main/default/objects/Checklist_do_Ativo__c/fields/Nome_do_Item__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Item__c</fullName>
    <label>Nome do Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>